# fly

./: .gitignore  .ocamlformat  README.md  ast.ml  changes.md  dune-project  fly.opam  fly.out  out.txt  parse.mly  prints.ml
.github/workflows/: build.yaml  format.yaml  test.yaml
lib/: ast.ml  dune  irgen.ml  parser.mly  sast.ml  scanner.mll  semant.ml  unbind.ml
lib/utils/: prints.ml  utils.ml
src/: ast.ml  ast.mli  dune  fly.ml  irgen.ml  parser.automaton  parser.conflicts  parser.mly  pparser.mly  prints.ml  sast.ml  scanner.mll  semant.ml  test_scanner.ml  test_scanner.sh
src/.github/workflows/: format.yaml
test/: dune  gen_parser_tests.sh  generate_scanner_tests.sh  plan_for_testing.txt  prints.ml  test_scanner.ml
test/ir/: dune  test_cond.ml  test_enums.ml  test_for.ml  test_ir.ml  test_list.ml  test_prelude.ml  test_print.ml  test_string.ml  test_udt.ml  test_vars.ml  test_while.ml
test/parser/: dune  test_and.ml  test_decr.ml  test_divide.ml  test_enums.ml  test_eq.ml  test_exp.ml  test_fun_args.ml  test_func_bind.ml  test_func_def_and_call1.ml  test_func_def_and_call2.ml  test_ge.ml  test_gt.ml  test_ifelse.ml  test_incr.ml  test_le.ml  test_list.ml  test_loops.ml  test_lt.ml  test_match.ml  test_minusassign.ml  test_mut.ml  test_neq.ml  test_not.ml  test_or.ml  test_plusassign.ml  test_postdecrement.ml  test_postincrement.ml  test_predecrement.ml  test_preincrement.ml  test_set.ml  test_times.ml  test_tuple.ml  test_while.ml
test/sample_programs/: binsearch.fly  enums_bind.fly  fib.fly  fizzbuzz.fly  sum.fly  test_adding_floates_if_else.fly  test_adding_floats.fly  test_and.fly  test_bools_ops.fly  test_bools_ops2.fly  test_bools_ops3.fly  test_bools_ops4.fly  test_concat_string.fly  test_divide.fly  test_enums.fly  test_eq.fly  test_exp.fly  test_func_bind.fly  test_func_def_and_call1.fly  test_func_def_and_call2.fly  test_gt.fly  test_ifelse.fly  test_lt.fly  test_mut.fly  test_neq.fly  test_not.fly  test_plusassign.fly  test_postdecrement.fly  test_predecrement.fly  test_preincrement.fly  test_times.fly  test_tuple.fly  test_while.fly
test/scanner/: dune  test_and.ml  test_decr.ml  test_divide.ml  test_enums.ml  test_eq.ml  test_exp.ml  test_func_bind.ml  test_func_def_and_call1.ml  test_func_def_and_call2.ml  test_ge.ml  test_gt.ml  test_gte.ml  test_ifelse.ml  test_incr.ml  test_le.ml  test_list.ml  test_loops.ml  test_lt.ml  test_lte.ml  test_match.ml  test_minusassign.ml  test_mut.ml  test_neq.ml  test_not.ml  test_or.ml  test_plusassign.ml  test_postdecrement.ml  test_postincrement.ml  test_predecrement.ml  test_preincrement.ml  test_set.ml  test_times.ml  test_tuple.ml  test_while.ml
test/type_checker/: dune  test_and.ml  test_bind.ml  test_divide.ml  test_for.ml  test_function.ml  test_loops.ml  test_return.ml  test_while.ml
tests/sample_programs/: primitive_type.fly  test_and.fly  test_bool.fly  test_char.fly  test_cons.fly  test_control_flow.fly  test_divide.fly  test_enums.fly  test_eq.fly  test_exp.fly  test_float.fly  test_func_bind.fly  test_func_def_and_call.fly  test_gt.fly  test_gte.fly  test_int.fly  test_list.fly  test_loops.fly  test_lt.fly  test_lte.fly  test_match.fly  test_minus.fly  test_minusassign.fly  test_mod.fly  test_mut.fly  test_neq.fly  test_not.fly  test_or.fly  test_plus.fly  test_plusassign.fly  test_postdecrement.fly  test_postincrement.fly  test_predecrement.fly  test_preincrement.fly  test_set.fly  test_string.fly  test_times.fly  test_tuple.fly  test_udf.fly  test_walrus.fly
