opam-version: "2.0"
name: "fly"
version: "0.1.0"
synopsis: ""
description: """"""

dependencies: [
  "ocaml" {>= "3.17.0"}  (* Specify the version of OCaml you're using, adjust if needed *)
  "dune" {>= "3.0"}      (* Specify the version of dune you're using *)
  "ounit2" {>= "2.0"}   (* Add other dependencies like ounit2 if needed for testing *)
]

build: [
  ["dune" "build" "-p" name]
]

test: [
  ["dune" "runtest"]
]

install: [
  ["dune" "install"]
]