opam-version: "2.0"
name: "fly"
version: "0.1.0"
synopsis: "The fly programming language"
description: "The fly programming language"
maintainer: "John Doe"
authors: [
  "kristoferfannar"
  "AlexZhu2"
  "AlenaResiko"
  "lsig"
  "starlordgazer2"
  "xytuang"
]
homepage: "https://github.com/flylanguage/fly"
bug-reports: "https://github.com/flylanguage/fly"
license: "MIT"

depends: [
  "ocaml" {>= "5.2.0"}
  "dune"
  "ounit2" {with-test}
]

build: [
  ["dune" "build" "-p" name]
  ["dune" "runtest"] {with-test}
]

install: [
  ["dune" "install"]
]