opam-version: "2.0"
name: "fly"
version: "0.1.0"
synopsis: "The fly programming language"
description: "The fly programming language"
maintainer: "John Doe"
authors: [
  "kristoferfannar"
  "AlexZhu2"
  "AlenaResiko"
  "lsig"
  "starlordgazer2"
  "xytuang"
]
homepage: "https://github.com/flylanguage/fly"
bug-reports: "https://github.com/flylanguage/fly"
license: "MIT"

depends: [
  "ocaml" {>= "4.14.2"}
  "dune" {>= "3.17.0"}
  "ounit2"
  "llvm" {== "14.0.6"}
]

build: [
  ["dune" "build" "-p" name]
  ["dune" "runtest"]
]
