(library
  (name test_scanner)
  (modules scanner/test_and
           scanner/test_divide
           scanner/test_enums
           scanner/test_eq
           scanner/test_exp
           scanner/test_func_bind
           scanner/test_func_def_and_call1
           scanner/test_func_def_and_call2
           scanner/test_gt
           scanner/test_gte
           scanner/test_ifelse
           scanner/test_list
           scanner/test_loops
           scanner/test_lt
           scanner/test_lte
           scanner/test_minusassign
           scanner/test_mut
           scanner/test_neq
           scanner/test_not
           scanner/test_or
           scanner/test_plusassign
           scanner/test_postdecrement
           scanner/test_postincrement
           scanner/test_predecrement
           scanner/test_preincrement
           scanner/test_set
           scanner/test_times
           scanner/test_tuple)
  (inline_tests)
  (libraries fly)
  (preprocess (pps ppx_expect)))
