(test 
  (name test_ir)
  (libraries fly_lib ounit2))

(test
  (name test_cond)
  (libraries fly_lib ounit2))

(test
  (name test_vars)
  (libraries fly_lib ounit2))

(test
  (name test_print)
  (libraries fly_lib ounit2))

(test
  (name test_udt)
  (libraries fly_lib ounit2))

(test
  (name test_enums)
  (libraries fly_lib ounit2))
