(test
  (name test_fun_args)
  (libraries fly_lib ounit2)) 

(test
  (name test_and)
  (libraries fly_lib ounit2)) 

(test
  (name test_divide)
  (libraries fly_lib ounit2)) 
 
(test
  (name test_enums)
  (libraries fly_lib ounit2)) 

(test
  (name test_eq)
  (libraries fly_lib ounit2)) 

(test
  (name test_exp)
  (libraries fly_lib ounit2)) 

(test
  (name test_func_bind)
  (libraries fly_lib ounit2))


(test
  (name test_func_def_and_call1)
  (libraries fly_lib ounit2)) 

(test
  (name test_func_def_and_call2)
  (libraries fly_lib ounit2)) 

(test
  (name test_gt)
  (libraries fly_lib ounit2)) 

(test
  (name test_ge)
  (libraries fly_lib ounit2))           
    
(test
  (name test_list)
  (libraries fly_lib ounit2)) 

(test
  (name test_loops)
  (libraries fly_lib ounit2))

(test
  (name test_lt)
  (libraries fly_lib ounit2)) 


(test
  (name test_le)
  (libraries fly_lib ounit2)) 

(test
  (name test_ifelse)
  (libraries fly_lib ounit2)) 

(test
  (name test_match)
  (libraries fly_lib ounit2)) 

(test
  (name test_minusassign)
  (libraries fly_lib ounit2)) 

(test
  (name test_mut)
  (libraries fly_lib ounit2)) 

(test
  (name test_neq)
  (libraries fly_lib ounit2)) 
          
(test
  (name test_not)
  (libraries fly_lib ounit2))          
          
(test
  (name test_or)
  (libraries fly_lib ounit2))            
          
(test
  (name test_plusassign)
  (libraries fly_lib ounit2))           

(test
  (name test_times)
  (libraries fly_lib ounit2))     

(test
  (name test_tuple)
  (libraries fly_lib ounit2)) 

(test
  (name test_postdecrement)
  (libraries fly_lib ounit2))  

(test
  (name test_postincrement)
  (libraries fly_lib ounit2)) 

(test
  (name test_predecrement)
  (libraries fly_lib ounit2))          

(test
  (name test_preincrement)
  (libraries fly_lib ounit2)) 

(test
  (name test_while)
  (libraries fly_lib ounit2)) 
