(test
 (name test_and)
 (libraries fly_lib ounit2))

(test
 (name test_divide)
 (libraries fly_lib ounit2))

(test
 (name test_loops)
 (libraries fly_lib ounit2))

 (test
  (name test_return)
  (libraries fly_lib ounit2))
 
(test
 (name test_function)
 (libraries fly_lib ounit2))

 (test
  (name test_for)
  (libraries fly_lib ounit2))
